# dirback

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: build.yml  gui-frontend.yml  release.yml  rust.yml
crates/dirback/: Cargo.toml
crates/dirback/src/: domain.rs  infra.rs  lib.rs
crates/dirback/src/domain/: model.rs  repository.rs
crates/dirback/src/domain/model/: backup_entry.rs  backup_file.rs  target.rs  timestamp.rs
crates/dirback/src/domain/repository/: targets.rs
crates/dirback/src/domain/service/: backup_service.rs
crates/dirback/src/infra/: file_storage.rs  in_memory.rs  service.rs
crates/dirback/src/infra/file_storage/: repository.rs
crates/dirback/src/infra/in_memory/: repository.rs
crates/dirback/src/infra/repository/: file_storage.rs
crates/dirback/src/infra/service/: targz_backup_service.rs
crates/dirback/src/usecase/: backup.rs  register_target.rs
crates/jsonfile/src/: lib.rs
crates/lib/dirback/: Cargo.toml
crates/lib/dirback/src/: adapter.rs  infra.rs  internal.rs  lib.rs  usecase.rs
crates/lib/dirback/src/adapter/: get_target.rs  list_targets.rs  show_target.rs
crates/lib/dirback/src/domain/: model.rs  service.rs
crates/lib/dirback/src/domain/model/: backup_entry.rs  target.rs  timestamp.rs
crates/lib/dirback/src/domain/repository/: targets.rs
crates/lib/dirback/src/infra/: app_path.rs  repository.rs
crates/lib/dirback/src/infra/repository/: file_storage.rs  in_memory.rs
crates/lib/dirback/src/infra/service/: targz_backup_service.rs
crates/lib/dirback/src/usecase/: backup.rs  delete_backup.rs  delete_target.rs  dto.rs  register_target.rs  restore.rs  usecase_test_helper.rs
crates/lib/dirback/src/usecase/dto/: backup_entry.rs  target.rs
crates/lib/jsonfile/: Cargo.toml
crates/lib/jsonfile/src/: lib.rs
crates/lib/mktemp/: Cargo.toml
crates/lib/mktemp/src/: lib.rs
crates/lib/targz/: Cargo.toml
crates/lib/targz/src/: lib.rs
crates/mktemp/: Cargo.toml
crates/mktemp/src/: lib.rs
crates/targz/src/: lib.rs
jig/: run-cmd.sh  run-gui.sh  run-tui.sh
