[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
jsonfile = { path = "crates/jsonfile" }
mktemp = { path = "crates/mktemp" }
targz = { path = "crates/targz" }

anyhow = "1.0.97"
thiserror = "2.0.12"
uuid = { version = "1.16.0", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
