[workspace]
members = ["crates/*/*"]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
dirback = { path = "crates/lib/dirback" }
jsonfile = { path = "crates/lib/jsonfile" }
mktemp = { path = "crates/lib/mktemp" }
targz = { path = "crates/lib/targz" }

anyhow = "1.0.97"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
uuid = { version = "1.16.0", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
