[package]
name = "dirback"
version = "0.1.0"
edition.workspace = true

[dependencies]
mktemp.workspace = true

anyhow = { workspace = true }
chrono = { version = "0.4.40", features = ["serde"] }
directories = "6.0.0"
thiserror = { workspace = true }
uuid = { version = "1.16.0", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"

