[package]
name = "dirback"
version = "0.1.0"
edition.workspace = true

[dependencies]
mktemp.workspace = true

anyhow = { workspace = true }
chrono = { version = "0.4.40", features = ["serde"] }
directories = "6.0.0"
thiserror = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
