[package]
name = "dirback"
description = "dirback core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
jsonfile.workspace = true
mktemp.workspace = true
targz.workspace = true

anyhow = { workspace = true }
chrono = { version = "0.4.40", features = ["serde"] }
directories = "6.0.0"
thiserror = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
