[package]
name = "jsonfile"
version = "1.0.0"
description = "A minimal json file reader/writer for dirback"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
mktemp.workspace = true
