[package]
name = "jsonfile"
description = "A minimal json file reader/writer for dirback"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
mktemp.workspace = true
