[package]
name = "targz"
description = "A minimal tar.gz archiver/extractor for dirback."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
mktemp.workspace = true

anyhow = { workspace = true }
flate2 = "1.1.0"
tar = "0.4.44"
